--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,14 @@
         android:theme="@style/Theme.DirectorDuckV10"
         tools:targetApi="31">
         <activity
+            android:name=".WrongReviewActivity"
+            android:exported="false"
+            android:theme="@style/Theme.DirectorDuckV10" />
+        <activity
+            android:name=".ResultActivity"
+            android:exported="false"
+            android:theme="@style/Theme.DirectorDuckV10" />
+        <activity
             android:name=".NoticeActivity"
             android:exported="false" />
         <activity
