--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     alias(libs.plugins.androidApplication)
     alias(libs.plugins.jetbrainsKotlinAndroid)
     id("kotlin-parcelize")
+    id("kotlin-kapt") // ✅ 给 Glide 用（推荐）
 }
 
 android {
@@ -13,33 +14,22 @@ android {
         buildConfig true
     }
 
-
     defaultConfig {
         applicationId "com.example.directorduck_v10"
         minSdk 24
         targetSdk 34
         versionCode 1
         versionName "1.0"
-
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
-//    buildTypes {
-//        release {
-//            minifyEnabled false
-//            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-//        }
-//    }
-
     buildTypes {
         debug {
-            // 开发环境使用本地服务器
             buildConfigField "String", "BASE_URL", "\"http://192.168.0.108:8080\""
             buildConfigField "boolean", "IS_DEBUG", "true"
         }
 
         release {
-            // 生产环境使用云服务器
             buildConfigField "String", "BASE_URL", "\"http://59.110.16.30:8080\""
             buildConfigField "boolean", "IS_DEBUG", "false"
             minifyEnabled false
@@ -47,15 +37,11 @@ android {
         }
     }
 
-
-
-
-
-
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
     kotlinOptions {
         jvmTarget = '1.8'
     }
@@ -70,6 +56,7 @@ dependencies {
     implementation libs.androidx.constraintlayout
     implementation libs.androidx.navigation.fragment.ktx
     implementation libs.androidx.navigation.ui.ktx
+
     testImplementation libs.junit
     androidTestImplementation libs.androidx.junit
     androidTestImplementation libs.androidx.espresso.core
@@ -78,28 +65,24 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
 
-    // Coroutines
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
-
-
     // OkHttp
     implementation "com.squareup.okhttp3:okhttp:4.12.0"
     implementation "com.squareup.okhttp3:logging-interceptor:4.12.0"
 
-    // 添加这两个以启用 by viewModels() 和 by activityViewModels()
+    // Coroutines（✅ 保留一个版本即可）
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3"
+
+    // KTX（by viewModels() / by activityViewModels()）
     implementation "androidx.activity:activity-ktx:1.8.0"
     implementation "androidx.fragment:fragment-ktx:1.6.2"
 
-    // 添加Glide依赖用于图片加载
-    implementation 'com.github.bumptech.glide:glide:4.15.1'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.15.1'
-
-    // 或者如果你使用Kotlin，也可以用kapt：
-//    kapt 'com.github.bumptech.glide:compiler:4.15.1'
-
+    // Lifecycle
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.6.2"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3"
 
+    // Glide（✅ Kotlin 项目推荐 kapt）
+    implementation "com.github.bumptech.glide:glide:4.15.1"
+    kapt "com.github.bumptech.glide:compiler:4.15.1"
 
-
+    // ✅ 学习报告图表库
+    implementation "com.github.PhilJay:MPAndroidChart:3.1.0"
 }
