--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,21 @@
         android:theme="@style/Theme.DirectorDuckV10"
         tools:targetApi="31">
         <activity
+            android:name=".feature.mockexam.ui.MockExamWrongReviewActivity"
+            android:exported="false" />
+        <activity
+            android:name=".feature.mockexam.ui.MockExamResultActivity"
+            android:exported="false" />
+        <activity
+            android:name=".feature.mockexam.ui.MockExamQuizActivity"
+            android:exported="false" />
+        <activity
+            android:name=".feature.mockexam.ui.MockExamListActivity"
+            android:exported="false" />
+        <activity
+            android:name=".feature.report.ui.ReportActivity"
+            android:exported="false" />
+        <activity
             android:name=".feature.favorite.ui.FavoriteCollectionActivity"
             android:exported="false" />
         <activity
